// Copyright 2023 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.service;

option java_multiple_files = true;

service TemplateGovernancePolicyService {
  rpc getReferences(TemplateGovernancePolicyRequest) returns (TemplateGovernancePolicyResponse);
}

message TemplateGovernancePolicyRequest {
  string yaml = 1;  // yaml construct that pms understands
  string accountIdentifier = 2;
  string orgIdentifier = 3;
  string projectIdentifier = 4;
  bytes gitSyncBranchContext = 5;
}

message TemplateGovernancePolicyResponse {
  repeated string moduleInfo = 2;
}
